# VisionBasicFunctions

audit-trail/: CMakeLists.txt  audit-trail.de.ts  audit-trail.en.ts  audittraildatabase.cpp  audittraildatabase.h  audittrailmodel.cpp  audittrailmodel.h  audittrailoptionpanel.cpp  audittrailoptionpanel.h  audittrailplugin.cpp  audittrailplugin.h  audittrailwidget.cpp  audittrailwidget.h
bdevengine/: BDEvEngineImageOverview.cpp  BDEvEngineImageOverview.h  BDEvEngineImagesOverview.cpp  BDEvEngineImagesOverview.h  BDEvEngineSettingsWidget.cpp  BDEvEngineSettingsWidget.h  BDevEngineImagesOverview.ui  CMakeLists.txt  CameraSimulation.cpp  CameraSimulation.h  ControlParameterWidget.cpp  ControlParameterWidget.h  GlobalConst.h  HalconMeasureTool.cpp  HalconMeasureTool.h  ImageData.cpp  ImageData.h  MainAppBDevEngine.cpp  MainAppBDevEngine.h  MainLogic.cpp  MainLogic.h  ProcedureIOControlParameter.h  ResultBufferAndImage.h  StreamingImage.cpp  StreamingImage.h  VideoProducer.cpp  VideoProducer.h  bdevengineplugin.cpp  bdevengineplugin.h  my_error_output.cpp  my_error_output.h  qhalconwindow.cpp  qhalconwindow.h  toojpeg.h
camera-gapi/: CMakeLists.txt  baumercamera.cpp  baumercamera.h  baumercameraitemdelegate.cpp  baumercameraitemdelegate.h  baumercameraplugin.cpp  baumercameraplugin.h  baumercameraview.cpp  baumercameraview.h  baumercamerawidget.cpp  baumercamerawidget.h
logger/: CMakeLists.txt  logger.de.ts  logger.en.ts  logger.es.ts  logger.fr.ts  logger.hr.ts  loggerdefines.h  loggeritem.cpp  loggeritem.h  loggermodel.cpp  loggermodel.h  loggeroptionpanel.cpp  loggeroptionpanel.h  loggerplugin.cpp  loggerplugin.h  loggerwidget.cpp  loggerwidget.h
opc_ua/: CMakeLists.txt  opc_ua.de.ts  opc_ua.en.ts  opc_ua.fr.ts  opcuabitstatewidget.cpp  opcuabitstatewidget.h  opcuaclient.cpp  opcuaclient.h  opcuainterface.cpp  opcuainterface.h  opcuaplugin.cpp  opcuaplugin.h  opcuaserver.cpp  opcuaserver.h  opcuastatewidget.cpp  opcuastatewidget.h  opcuatextwidget.cpp  (+3 more)
